--- a/aboutus.html
+++ b/aboutus.html
@@ -27,7 +27,7 @@
                         <li class="nav-item"> <a class="nav-link" href= "index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
                         <li class="nav-item"> <a class="nav-link active" href="#"><span class="fa fa-info fa-lg"></span> About</a></li>
                         <li class="nav-item"> <a class="nav-link" href= "#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                        <li class="nav-item"> <a class="nav-link" href= "#"><span class="fa fa-address-card fa-lg"> Contact</span></a> </li>
+                        <li class="nav-item"> <a class="nav-link" href= "contactus.html"><span class="fa fa-address-card fa-lg"> Contact</span></a> </li>
                     </ul>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
@@ -135,4 +135,11 @@
            </div>
         </div>
     </footer>
-     <!-- jQuery first, then Popper.js,
+     <!-- jQuery first, then Popper.js,then Bootstrap JS. -->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+</body>
+
+</html>
