--- a/index.html
+++ b/index.html
@@ -115,112 +115,167 @@
     </header>
 
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col-12 col-sm-8 order-sm-first col-9">
-                <div class="media">
-                    <img class="d-flex mr-3 align-self-center img-thumbnail" src="img/uthappizza.png">
-                    <div class="media-body">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
 
-                        <h3 class="mt-0">Uthappizza
-                            <span class="badge badge-danger">HOT</span>
-                            <span class="badge badge-pill badge-secondary">$4.99</span>
-                        </h3>
-                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
-                            pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur
-                            chillies and Buffalo Paneer.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row row-content align-items-center">
-
-            <div class="col-12 col-sm-8 order-sm-last col-9">
-                <div class="media">
-
-                    <div class="media-body">
-                        <h3 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">New</span></h3>
-                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
-                            different salads, six enticing appetizers, six main entrees and five choicest desserts.
-                            Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                    </div>
-                    <img class="d-flex mr-3 align-self-center img-thumbnail flex-last" src="img/buffet.png">
-                </div>
-            </div>
-
-            <div class="col-12 col-sm-4 col-md-3">
-                <h3>This Month's Promotions</h3>
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Meet our Culinary Specialists</h3>
-            </div>
-            <div class="col-12 col-sm-8 order-sm-first col-9">
-                <div class="media">
-                    <img src="img/alberto.png" class="align-self-center img-thumbnail d-flex mr-3">
-                    <div class="media-body">
-                        <h3 class="mt-0">Alberto Somayya</h3>
-                        <h4 class="mt-0">Executive Chef</h4>
-                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International
-                            experience having worked closely with whos-who in the culinary world, he specializes in
-                            creating mouthwatering Indo-Italian fusion experiences. </p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="col-8 offset-2">
-            <div class="card">
-                <div class="card-header bg-warning text-white">
-                    <h3>Reserve a Table</h3>
-                </div>
-                <form id="reservetable">
-
-                    <div class="form-group row">
-                        <div class="card-body">
-                            <dl class="row">
-
-                                <dt class="col-4">Number of Guests</dt>
-                                <dd class="col-8">
-                                    <label class="radio-inline"><input type="radio" name="optradio"> 1</label>
-                                    <label class="radio-inline"><input type="radio" name="optradio"> 2</label>
-                                    <label class="radio-inline"><input type="radio" name="optradio"> 3</label>
-                                    <label class="radio-inline"><input type="radio" name="optradio"> 4</label>
-                                    <label class="radio-inline"><input type="radio" name="optradio"> 5</label>
-                                    <label class="radio-inline"><input type="radio" name="optradio"> 6</label>
-                                </dd>
-                            </dl>
-
-
-
-                            <div class="form-group row">
-                                <label for="date" class="col-12 col-md-2 col-form-label"><dt>Date &amp;Time</dt></label>
-                                <div class="col-4 offset-1">
-                                    <input type="date" class="form-control" id="date" placeholder="Date">
-                                </div>
-                                <div class="col-4">
-                                    <input type="time" class="form-control" id="time" name="telnum" placeholder="Time">
-                                </div>
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza
+                                    <span class="badge badge-danger">HOT</span>
+                                    <span class="badge badge-pill badge-secondary">$4.99</span>
+                                </h2>
+                                <p>A unique combination of Indian Uthappam (pancake) and Italian
+                                    pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion,
+                                    Guntur chillies and Buffalo Paneer.</p>
                             </div>
-                            <br>
-                            <div class="form-group row">
-                                <div class="offset-md-3 col-md-10">
-                                    <button type="submit" class="btn btn-primary">Send Feedback</button>
-                                </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/buffet.png">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Weekend Grand Buffet <span class="badge badge-danger">New</span></h2>
+                                <p>Featuring mouthwatering combinations with a choice of five
+                                    different salads, six enticing appetizers, six main entrees and five choicest
+                                    desserts.
+                                    Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                             </div>
-
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/alberto.png">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Alberto Somayya</h2>
+                                <h3>Executive Chef</h3>
+                                <p>Award winning three-star Michelin chef with wide International
+                                    experience having worked closely with whos-who in the culinary world, he
+                                    specializes in
+                                    creating mouthwatering Indo-Italian fusion experiences. </p>
+                            </div>
                         </div>
                     </div>
-                </form>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"> </li>
+                        <li data-target="#mycarousel" data-slide-to="1"> </li>
+                        <li data-target="#mycarousel" data-slide-to="2"> </li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                            <span class="carousel-control-prev-next"></span>
+                        </a>
+                </div>
+                
             </div>
         </div>
+    </div>
+    <div class="row row-content align-items-center">
+        <div class="col-12 col-sm-4 order-sm-last col-md-3">
+            <h3>Our Lipsmacking Culinary Creations</h3>
+        </div>
+        <div class="col-12 col-sm-8 order-sm-first col-9">
+            <div class="media">
+                <img class="d-flex mr-3 align-self-center img-thumbnail" src="img/uthappizza.png">
+                <div class="media-body">
+
+                    <h3 class="mt-0">Uthappizza
+                        <span class="badge badge-danger">HOT</span>
+                        <span class="badge badge-pill badge-secondary">$4.99</span>
+                    </h3>
+                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
+                        pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur
+                        chillies and Buffalo Paneer.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row row-content align-items-center">
+
+        <div class="col-12 col-sm-8 order-sm-last col-9">
+            <div class="media">
+
+                <div class="media-body">
+                    <h3 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">New</span></h3>
+                    <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
+                        different salads, six enticing appetizers, six main entrees and five choicest desserts.
+                        Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                </div>
+                <img class="d-flex mr-3 align-self-center img-thumbnail flex-last" src="img/buffet.png">
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-4 col-md-3">
+            <h3>This Month's Promotions</h3>
+        </div>
+    </div>
+
+    <div class="row row-content align-items-center">
+        <div class="col-12 col-sm-4 order-sm-last col-md-3">
+            <h3>Meet our Culinary Specialists</h3>
+        </div>
+        <div class="col-12 col-sm-8 order-sm-first col-9">
+            <div class="media">
+                <img src="img/alberto.png" class="align-self-center img-thumbnail d-flex mr-3">
+                <div class="media-body">
+                    <h3 class="mt-0">Alberto Somayya</h3>
+                    <h4 class="mt-0">Executive Chef</h4>
+                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International
+                        experience having worked closely with whos-who in the culinary world, he specializes in
+                        creating mouthwatering Indo-Italian fusion experiences. </p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="col-8 offset-2">
+        <div class="card">
+            <div class="card-header bg-warning text-white">
+                <h3>Reserve a Table</h3>
+            </div>
+            <form id="reservetable">
+
+                <div class="form-group row">
+                    <div class="card-body">
+                        <dl class="row">
+
+                            <dt class="col-4">Number of Guests</dt>
+                            <dd class="col-8">
+                                <label class="radio-inline"><input type="radio" name="optradio"> 1</label>
+                                <label class="radio-inline"><input type="radio" name="optradio"> 2</label>
+                                <label class="radio-inline"><input type="radio" name="optradio"> 3</label>
+                                <label class="radio-inline"><input type="radio" name="optradio"> 4</label>
+                                <label class="radio-inline"><input type="radio" name="optradio"> 5</label>
+                                <label class="radio-inline"><input type="radio" name="optradio"> 6</label>
+                            </dd>
+                        </dl>
+
+
+
+                        <div class="form-group row">
+                            <label for="date" class="col-12 col-md-2 col-form-label"><dt>Date &amp;Time</dt></label>
+                            <div class="col-4 offset-1">
+                                <input type="date" class="form-control" id="date" placeholder="Date">
+                            </div>
+                            <div class="col-4">
+                                <input type="time" class="form-control" id="time" name="telnum" placeholder="Time">
+                            </div>
+                        </div>
+                        <br>
+                        <div class="form-group row">
+                            <div class="offset-md-3 col-md-10">
+                                <button type="submit" class="btn btn-primary">Send Feedback</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 
     </div>
     <br>
