--- a/index.html
+++ b/index.html
@@ -94,6 +94,59 @@
         </div>
 
     </div>
+    <div id="reservetable" class="modal fade" role="dialog">
+        <div class="modal-dialog" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <dl class="row">
+
+                                <dt class="col-4">Number of Guests</dt>
+                                <dd class="col-8">
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 1</label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 2</label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 3</label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 4</label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 5</label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 6</label>
+                                </dd>
+                            </dl>
+
+                        </div>
+                        <div class="form-row">
+                            <dt>Section</dt>
+                            <button type="button" class="btn btn-success offset-2 col-3 ">Smoking</button>
+                            <button type="submit" class="btn btn-danger">Non Smoking</button>
+                        </div>
+                        <br>
+                        <div class="form-group row">
+                            <label for="date" class="col-12 col-md-2 col-form-label"><dt>Date &amp;Time</dt></label>
+                            <div class="col-4 offset-1">
+                                <input type="date" class="form-control" id="date" placeholder="Date">
+                            </div>
+
+                            <div class="col-4">
+                                <input type="time" class="form-control" id="time" name="telnum" placeholder="Time">
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary offset-4 col-3 " data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary col-3"> Reserve</button>
+                        </div>
+
+
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
     <header class="jumbotron">
         <div class="container">
@@ -107,8 +160,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a class="btn btn-warning btn-block btn-sm" data-toggle="tooltip" data-html="true" title="Or Call Us at <br> <strong> 852 12345678 </strong>"
-                        data-placement="top" href="#reservetable" role="button">Reserve a Table</a>
+                    <a class="btn btn-warning btn-block btn-sm" data-toggle="modal" data-target="#reservetable">Reserve
+                        a Table</a>
                 </div>
             </div>
         </div>
@@ -145,12 +198,14 @@
                         <div class="carousel-item">
                             <img class="d-block img-fluid" src="img/alberto.png">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Alberto Somayya</h2>
-                                <h3>Executive Chef</h3>
-                                <p>Award winning three-star Michelin chef with wide International
-                                    experience having worked closely with whos-who in the culinary world, he
-                                    specializes in
-                                    creating mouthwatering Indo-Italian fusion experiences. </p>
+                                <div class="carousel-edit">
+                                    <h2>Alberto Somayya</h2>
+                                    <h3>Executive Chef</h3>
+                                    <p>Award winning three-star Michelin chef with wide International
+                                        experience having worked closely with whos-who in the culinary world, he
+                                        specializes in
+                                        creating mouthwatering Indo-Italian fusion experiences. </p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -160,13 +215,13 @@
                         <li data-target="#mycarousel" data-slide-to="2"> </li>
                     </ol>
                     <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon"></span>
-                        </a>
-                        <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
-                            <span class="carousel-control-prev-next"></span>
-                        </a>
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-prev-next"></span>
+                    </a>
                 </div>
-                
+
             </div>
         </div>
     </div>
@@ -231,95 +286,7 @@
         </div>
     </div>
     <br>
-    <div class="col-8 offset-2">
-        <div class="card">
-            <div class="card-header bg-warning text-white">
-                <h3>Reserve a Table</h3>
-            </div>
-            <form id="reservetable">
 
-                <div class="form-group row">
-                    <div class="card-body">
-                        <dl class="row">
-
-                            <dt class="col-4">Number of Guests</dt>
-                            <dd class="col-8">
-                                <label class="radio-inline"><input type="radio" name="optradio"> 1</label>
-                                <label class="radio-inline"><input type="radio" name="optradio"> 2</label>
-                                <label class="radio-inline"><input type="radio" name="optradio"> 3</label>
-                                <label class="radio-inline"><input type="radio" name="optradio"> 4</label>
-                                <label class="radio-inline"><input type="radio" name="optradio"> 5</label>
-                                <label class="radio-inline"><input type="radio" name="optradio"> 6</label>
-                            </dd>
-                        </dl>
-
-
-
-                        <div class="form-group row">
-                            <label for="date" class="col-12 col-md-2 col-form-label"><dt>Date &amp;Time</dt></label>
-                            <div class="col-4 offset-1">
-                                <input type="date" class="form-control" id="date" placeholder="Date">
-                            </div>
-                            <div class="col-4">
-                                <input type="time" class="form-control" id="time" name="telnum" placeholder="Time">
-                            </div>
-                        </div>
-                        <br>
-                        <div class="form-group row">
-                            <div class="offset-md-3 col-md-10">
-                                <button type="submit" class="btn btn-primary">Send Feedback</button>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    </div>
-    <br>
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 offset-1 col-sm-2">
-                    <h5>Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="aboutus.html">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="contactus.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-7 col-sm-5">
-                    <h5>Our Address</h5>
-                    <address>
-                        121, Clear Water Bay Road<br>
-                        Clear Water Bay, Kowloon<br>
-                        HONG KONG<br>
-                        <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
-                        <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
-                        <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:confusion@food.net">confusion@food.net</a>
-                    </address>
-                </div>
-                <div class="col-12 col-sm-4 align-self-center">
-                    <div class="text-center">
-                        <a class="btn btn-social-media btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
-                        <a class="btn btn-social-media btn-facebook" href="http://www.facebook.com/profile.php?id="><i
-                                class="fa fa-facebook fa-lg"></i></a>
-                        <a class="btn btn-social-media btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
-                        <a class="btn btn-social-media btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
-                        <a class="btn btn-social-media btn-twitter" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
-                        <a class="btn btn-social-media" href="mailto:"><i class="fa fa-envelope fa-lg"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
-                </div>
-            </div>
-        </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
